[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/Watermelon Days.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menu/Help.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/SimpleBox.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 112
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Help" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -247.5
margin_top = 110.0
margin_right = 247.5
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "CRYSTAL DASH"

[node name="CreatorLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -310.0
margin_right = 197.0
margin_bottom = -228.0
custom_fonts/font = SubResource( 2 )
text = "how do i play?"

[node name="HelpLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -220.0
margin_right = 958.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 4 )
text = "click on crystals and match them in lines of at least 3 of the same color
to break them. you get more points if your line is bigger and have multiple lines at once!
the game ends when the timer runs out. break crystals to add more time!
if you make 5 wrong moves in a row, the board will automatically reset to give you more moves.

press m to either mute or play music in game
press l to loop current track
use arrow keys to switch current track"
align = 1

[node name="CreditsLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -958.0
margin_top = -189.0
margin_right = 960.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 5 )
text = "programming: sp4r0w

art made by kenney
ui (buttons and panels) made by azagaya
music made by Benjamin Burnes"
align = 1

[node name="ChangeButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = 260.0
margin_right = 87.5
margin_bottom = 321.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "next page"

[node name="QuitButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 360.0
margin_right = 65.0
margin_bottom = 421.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "menu"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/ChangeButton" to="." method="_on_ChangeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_pressed"]
